# sparrow_engine

./: .gitignore  gen_bricks.py  graphics_refactor.md  graphics_refactor_plan.txt  main.py  pyproject.toml  test_net.py  test_rendering.py
assets/shaders/: fullscreen.vert  light.frag  lighting.frag  point_light.frag  point_light.vert  post.frag  post.vert  sprite.frag  sprite.vert  triangle.frag  triangle.vert
game/: constants.py
game/components/: boid.py  enemy.py  player.py  screen_fade.py  smooth_follow.py  spaceship.py  star.py
game/entities/: player.py
game/factories/: actor.py  game_object.py
game/scenes/: dungeon.py  physics_scene.py  polygon_scene.py  renderer_test_scene.py  spash_screen.py  test_scene.py
game/spatial/: generator.py
game/systems/: boid.py  player_controller.py  screen_fade.py  smooth_follow.py  starfield_system.py  trails.py
sparrow/: camera.py  math.py  types.py
sparrow/assets/: __init__.py  handle.py  registry.py  server.py  types.py
sparrow/core/: __init__.py  application.py  archetype.py  batch_view.py  component.py  components.py  events.py  query.py  registry.py  resources.py  scene.py  scheduler.py  system.py  timing.py  world.py
sparrow/debug/: dump.py  profiler.py
sparrow/graphics/: camera.py  components.py  context.py  gbuffer.py  light.py  renderer.py  renderer_module.py  shaders.py
sparrow/helpers/: physics.py
sparrow/input/: context.py  handler.py
sparrow/net/: __init__.py  client.py  components.py  host.py  network.py  protocol.py  resources.py  serializer.py  snapshot.py  (+1 more)
tests/: conftest.py
(+159 files in other folders)
